cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_411.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/ts/ts_rsp_sign.c:801: error: DEAD_STORE
  The value written to &p (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/ts/ts_rsp_sign.c:801:6: Write of unused value
799.       }
800.       *p++ = 'Z';
801.       *p++ = '\0';
            ^
802.   
803.       if (asn1_time == NULL
